
5.1.0 -> 5.2a0:
    - jbj: add :rpn formatter to do simple arithemetic on input.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: insure no access before buffer if fgets(3) returns NUL.
    - jbj: tevr: add missing level of ht indirection, free input strings.
    - jbj: fix: --triggers segfault, don't depend on he->p.ptr = NULL after
	headerGet() failed return.
    - jbj: try ":foo" == extractor, "|foo" == transformer, format extensions.
    - jbj: permit :stat(foo) extraction from RPMTAG_PACKAGESTAT.
    - jbj: add RPMTAG_PACKAGESTAT, and store persistently in a rpmdb Header.
    - jbj: rpmrepo: achieve {primary,filelists,other}.xml spew parity w createrepo.
    - jbj: rpmrepo: compute origin *.rpm file digest while reading.
    - jbj: preserve stat(2) & digest through headerReload().
    - jbj: get rid of copy-n-paste typos, add "l" type markers to rpmtag.h.
    - jbj: add RPMTAG_PACKAGEDIGEST extension as RPM_STRING_TYPE.
    - jbj: add digest of origin *.rpm to Header internal store.
    - jbj: add RPMTAG_PACKAGESIZE extension as RPM_UINT64_TYPE.
    - jbj: rework RPMTAG_PACKAGETIME extension as RPM_UINT64_TYPE.
    - jbj: rework header{Get,Set}Time as header{Get,Stat}Statbuf methods.
    - jbj: add stat(2) of origin *.rpm to Header internal store.
    - jbj: permit file digests through (e.g.) :stat(sha512) format extension.
    - jbj: add :uuid(vN) format. UUIDv5 URI design & tag type coercion todo++.
    - jbj: rpmuuid: add i18n to error messages.
    - jbj: fix: blessed NUL termination for Readlink return.
    - jbj: retrofit v5 UUID's for hdrid/pkgid digests as tag extensions.
    - jbj: retrofit v1 UUID's for time stamps as tag extensions.
    - jbj: replace "diskstat" tag with :stat format extension instead.
    - jbj: add :digest(foo) format. :fdigest(algo) for rpmrepo spew soon ...
    - jbj: generalize :utf8 to :iconv(UTF-8) iconv(3) conversions.