@@ -1,5 +1,10 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: add a missing newline to a debug message.
+    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
+	in rpmtsFindPubkey instead.
+    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
+	open in rpmtsFindPubkey.
     - jbj: add :rpn formatter to do simple arithemetic on input.
     - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
     - jbj: fix: insure no access before buffer if fgets(3) returns NUL.
